k8s/elastic-deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: elastic
spec:
  selector:
    matchLabels:
      app: elastic
      role: master
      tier: elk
  replicas: 1
  template:
    metadata:
      labels:
        app: elastic
        role: master
        tier: elk
    spec:
      # securityContext:
      #   runAsUser: 1000
      #   fsGroup: 1000
      containers:
        - name: elastic
          image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.4.2
          ports:
            - containerPort: 9200
            - containerPort: 9300
          # volumeMounts:
          #   - name: data
          #     mountPath: /usr/share/elasticsearch/data
          #   - name: elastic-config
          #     mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
      # volumes:
      #   - name: data
      #     persistentVolumeClaim:
      #       claimName: mrll-bot-elastic-claim
        # - name: elastic-config
        #   hostPath:
        #     # directory location on host
        #     path: ../elastic/elasticsearch.yml
        #     type: File
