k8s/kibana-deployment.yml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: kibana
spec:
  selector:
    matchLabels:
      app: kibana
      role: master
      tier: elk
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana
        role: master
        tier: elk
    spec:
      containers:
        - name: kibana
          image: mrllsvc/docker-kibana:6.4.3-config
          # imagePullPolicy: Always
          ports:
            - containerPort: 5601
