k8s/elastic-service.yml
apiVersion: v1
kind: Service
metadata:
  name: elastic-svc
  labels:
    app: elastic
    role: master
    tier: elk
  annotations:
    # type of authentication
    # nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    # nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - mrll-bot'
spec:
  # type: NodePort
  ports:
    - name: elastic-http
      port: 9200
    - name: elastic-comms
      port: 9300
  # Replace with the IP of your minikube node / master node if you want external access
  # externalIPs:
  #   - xxx.zzz.yyy.qqq
  selector:
    app: elastic
    role: master
    tier: elk
