k8s/kibana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana-svc
  labels:
    app: kibana
    role: master
    tier: elk
spec:
  ports:
    - name: kibana-api
      port: 5601
  selector:
    app: kibana
    role: master
    tier: elk
