k8s/logstash-service.yml
apiVersion: v1
kind: Service
metadata:
  name: logstash-svc
  labels:
    app: logstash
    role: master
    tier: elk
spec:
  ports:
    - name: logstash-github
      port: 9400
    - name: logstash-beats
      port: 5044
    - name: logstash-api
      port: 80
      targetPort: 9600
  selector:
    app: logstash
    role: master
    tier: elk
